style: attempt to fix potential overflow on mobile

--- a/src/ui/root/music/scrollingTitle.module.css
+++ b/src/ui/root/music/scrollingTitle.module.css
@@ -16,6 +16,7 @@
 
 .marquee {
   width: 100%;
+  max-width: 100%;
   display: block;
 }
 
