--- a/src/ui/root/music/song.module.css
+++ b/src/ui/root/music/song.module.css
@@ -1,7 +1,7 @@
 .song {
   display: flex;
   flex-direction: column;
-  width: min-content;
+  flex: 1 1 0;
   color: var(--foreground);
   text-decoration: none;
 }
